--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ node_modules/
 
 # production
 /build/
+.env
 
 # misc
 .DS_Store
@@ -17,7 +18,4 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-
-#TODO add .env to your gitignore
 
