--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,9 @@
     "@material-ui/core": "^4.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-hook-form": "^7.0.7",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
